<resources>
    <string name="app_name">มรภ บร</string>
    <string name="name">ชื่อ:</string>
    <string name="datestart">วันเริ่มงาน:</string>
    <string name="dateend">วันสิ้นสุดงาน:</string>
    <string name="description">รายละเอียด:</string>
    <string name="lat">พิกัดละ:</string>
    <string name="lng">พิกัดลอง:</string>
    <string name="place">สถานที่:</string>
    <string name="title_activity_maps">มรภ บร</string>
    <string name="number">เบอร์ติดต่อ:</string>
    <string name="title_activity_main_map">แผนที่</string>
    <string name="skip">ข้าม</string>
    <string name="q">แนะนำการใช้งาน</string>
    <string name="title_activity_maps_sctivity">แผนที่</string>
    <string name="title_activity_maps2">แผนที่</string>
    <string name="hit_event">ชื่อ</string>
    <string name="hit_place">สถานที่</string>
    <string name="hit_phone">ชื่อติดต่อ</string>
    <string name="title_activity_test">แผนที่</string>
    <string name="closs">โปรดระวังเส้นทางต่อไปนี้</string>
    <string name="wrong">อินเตอร์เน็ตของท่านมีปัญหา. :</string>
    <string name="get_menu">คุณได้กดเลือก  :</string>
    <string name="toilet">ห้องน้ำ</string>
    <string name="not_internet">เชื่อมต่ออินเตอร์เน็ตมีปัญหา ลองอีกครั้ง หรือระบบมีปัญหาโปรดรายงานปัญหาจากปุ่ม Report</string>
    <string name="ty">ขอบคุณที่รายงานปัญหา</string>
    <string name="load">กำลังโหลดข้อมูล........</string>
    <string name="fill">กรุณากรอกข้อความ</string>
    <string name="guide_direction">หากต้องการนำทางสามารถกดปุ่มนำทางมุมล่างขวา</string>
    <string name="not_found">ไม่พบ</string>
    <string name="into_care_full">โปรดระวังเส้นทางดังต่อไปนี้และเห็นแผนที่นี้ไหมละวังเส้นทางที่ถูกปิดกันด้วยนะ</string>
    <string name="into_back">หากเข้าใจแล้วกดปุ่มนี้เพื่อกลับไปยังหน้าหลัก</string>
    <string name="into_report">คุณสามารถรายงานข้อผิดพลาดของระบบหรือข้อมูลไปยังผู้ดูแลระบบได้จากปุ้มนี้</string>
    <string name="into_event">คุณสามารถค้นหางานหรือสถานที่จัดงานขึ้นได้จากตรงนี้..และหากต้องการให้แสดงรายระเอียด หรือให้เรานำทางโปรดกดเลือกที่รายการและกดปุ่มมุมล่างขวา </string>
    <string name="into_place">สามารถหาสถานที่ต่าง ๆ ได้จากตรงนี้นะจ้ะ..และอย่าลืมหากต้องการให้เรานำทางเลือกสถานทีและ กดเลือกที่ Markerก่อนแล้วกดปุ่มมุมล่างขวาเพื่อนำทาง</string>
    <string name="into_toilet">ปวดเบาใช่ไหม หรือปวดหนักปุ่มนี้ซิ..และอย่าลืมหากต้องการให้เรานำทางเลือกสถานทีและกดเลือกที่ Marker่ก่อนแล้วกดปุ่มมุมล่างขวาเพื่อนำทาง</string>
    <string name="into_phone">คุณสามารถหาเบอร์โทรติดต่อได้จาก รายการ ของปุ้มนี้และกดเลือกเพื่อโทรออก</string>
    <string name="report">รายงานปัญหา........</string>
    <string name="welcome">ยินดีต้อนรับสู่แอพของเรา</string>

</resources>
