<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgevent1"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="5dp" />

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <com.example.tanon.mybru.CTextView
            android:id="@+id/name_event_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/back"
            android:textSize="@dimen/font_size"/>

        <com.example.tanon.mybru.CTextView
            android:id="@+id/nameevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/name_event_lable"
            android:layout_toRightOf="@+id/name_event_lable"
            android:paddingLeft="10dp"
            android:textColor="@color/back"
            android:textSize="@dimen/font_size"/>

        <com.example.tanon.mybru.CTextView
            android:id="@+id/date_start_eventlable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameevent"
            android:text="@string/datestart"
            android:textColor="@color/back"
            android:textSize="@dimen/font_size"/>

        <com.example.tanon.mybru.CTextView
            android:id="@+id/date_start_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/date_start_eventlable"
            android:layout_alignBottom="@+id/date_start_eventlable"
            android:layout_toEndOf="@+id/date_start_eventlable"
            android:layout_toRightOf="@+id/date_start_eventlable"
            android:paddingLeft="10dp"
            android:textColor="@color/back"
            android:textSize="@dimen/font_size"/>

        <com.example.tanon.mybru.CTextView
            android:id="@+id/date_end_eventlable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_start_eventlable"
            android:text="@string/dateend"
            android:textColor="@color/back"
            android:textSize="@dimen/font_size"/>

        <com.example.tanon.mybru.CTextView
            android:id="@+id/date_end_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_start_eventlable"
            android:layout_toEndOf="@+id/date_end_eventlable"
            android:layout_toRightOf="@+id/date_end_eventlable"
            android:paddingLeft="10dp"
            android:textColor="@color/back"
            android:textSize="@dimen/font_size"/>


    </RelativeLayout>

</RelativeLayout>